# machine_learning_with_python_2nd_edition

./: .gitignore  .gitmodules  README.md  example_environment.yml  reame.md  requirements.txt
ch02_ml_dev_process/mlflow_forcasting/: pyproject.toml
ch02_ml_dev_process/mlflow_forcasting/mlflow_forcasting/: mlflow_forecasting.py
ch02_ml_dev_process/model_version_control/: pyproject.toml
ch02_ml_dev_process/model_version_control/mlruns/0/: meta.yaml
ch02_ml_dev_process/model_version_control/mlruns/mlruns/0/: meta.yaml
ch02_ml_dev_process/model_version_control/model_version_control/: mlfow_basic.py
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/: meta.yaml
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/167450bdb6f94b20bee1d08ae794b868/: meta.yaml
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/167450bdb6f94b20bee1d08ae794b868/metrics/: foo1  foo2  foo3
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/167450bdb6f94b20bee1d08ae794b868/tags/: mlflow.runName  mlflow.source.git.commit
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/a5322e0ed6da443d87178b54f05918cd/: meta.yaml
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/a5322e0ed6da443d87178b54f05918cd/metrics/: foo
ch02_ml_dev_process/model_version_control/model_version_control/mlruns/0/a5322e0ed6da443d87178b54f05918cd/tags/: mlflow.runName  mlflow.source.git.commit  (+1 more)
ch02_ml_dev_process/poetry_mleng_python_spark_pipeline/: pyproject.toml
(+9 files in other folders)
