[tool.poetry]
name = "mleng-with-python"
version = "0.1.0"
description = ""
authors = ["letlhogile05 <letlhogile@gometroapp.com>"]
readme = "README.md"
packages = [{include = "mleng_with_python"}]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "*"
pyspark = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
